--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
+    "@iconify/json": "^2.2.397",
     "@stylistic/eslint-plugin": "^5.2.3",
     "@types/node": "^24.2.1",
     "@typescript-eslint/eslint-plugin": "^7.18.0",
@@ -42,6 +43,8 @@
     "ts-node": "^10.9.2",
     "tsx": "^4.20.3",
     "typescript": "^5.2.0",
+    "unplugin-icons": "^22.4.2",
+    "unplugin-vue-components": "^29.1.0",
     "vite": "^5.0.0",
     "vue-eslint-parser": "^10.2.0",
     "vue-tsc": "^2.0.0"
