--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "dependencies": {
     "@vueuse/core": "^13.6.0",
     "axios": "^1.12.2",
+    "dompurify": "^3.3.0",
+    "lodash.debounce": "^4.0.8",
     "pinia": "^2.1.0",
     "vue": "^3.4.0",
     "vue-feather": "^2.0.0",
@@ -24,6 +26,8 @@
     "@eslint/js": "^9.33.0",
     "@iconify/json": "^2.2.397",
     "@stylistic/eslint-plugin": "^5.2.3",
+    "@types/dompurify": "^3.2.0",
+    "@types/lodash.debounce": "^4.0.9",
     "@types/node": "^24.2.1",
     "@typescript-eslint/eslint-plugin": "^7.18.0",
     "@typescript-eslint/parser": "^7.18.0",
