feat: add multiselect, layouts, tabs, topbar and update components lib, added reactivity

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lodash.debounce": "^4.0.8",
     "pinia": "^2.1.0",
     "vue": "^3.4.0",
+    "vue-multiselect": "^3.4.0",
     "vue-router": "^4.2.0"
   },
   "devDependencies": {
