--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "pinia": "^2.1.0",
     "vue": "^3.4.0",
     "vue-multiselect": "^3.4.0",
-    "vue-router": "^4.2.0"
+    "vue-router": "^4.2.0",
+    "vue-sonner": "^2.0.9"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
